<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addMedicineLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMedicineActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/name_edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/qtyTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/qtyTextView"
        app:layout_constraintTop_toTopOf="@+id/qtyTextView" />

    <TextView
        android:id="@+id/qtyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/qtyTextNumber"
        android:text="@string/quantity_label"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/calendarView"
        android:text="@string/expiration_date_label"
        app:layout_constraintStart_toStartOf="@+id/qtyTextView"
        app:layout_constraintTop_toBottomOf="@+id/qtyTextNumber" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>