<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/row_name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/row_remaining_pills_label"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/rowNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/row_name_label"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/rowRemainingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/row_remaining_pills_label"
        app:layout_constraintStart_toEndOf="@+id/countLabel"
        app:layout_constraintTop_toTopOf="@+id/countLabel" />

    <TextView
        android:id="@+id/expDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/expiration_date_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/countLabel" />

    <TextView
        android:id="@+id/expDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/expiration_date_label"
        app:layout_constraintStart_toEndOf="@+id/expDateLabel"
        app:layout_constraintTop_toTopOf="@+id/expDateLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>